# Robos_autonomos

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ai_assitance/lib/ai_assitance/: my_circle_movement  obstacle_avoiding_node
ros2_ws/install/ai_assitance/share/ai_assitance/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/navigation_tb3/share/navigation_tb3/: package.sh
ros2_ws/install/nodes/lib/nodes/: pub_node
ros2_ws/install/nodes/share/nodes/: local_setup.sh  package.sh
ros2_ws/install/open3d-detector/lib/open3d-detector/: open3d_detector
ros2_ws/install/open3d-detector/share/open3d-detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/point_cloud_perception/lib/point_cloud_perception/: clustering  voxeling
ros2_ws/install/point_cloud_perception/share/point_cloud_perception/: package.sh
ros2_ws/install/robot_math/share/robot_math/: package.sh
ros2_ws/install/rrt_navigation/lib/rrt_navigation/: rrt_navigation  test_camera
ros2_ws/install/rrt_navigation/share/rrt_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/transforms/share/transforms/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/rrt_navigation/: CMakeLists.txt  setup.cfg  setup.py
ros2_ws/src/rrt_navigation/launch/: rrt_worldlaunch.py
ros2_ws/src/rrt_navigation/rrt_navigation/: rrt_navigation_backup  test_camera.py
ros2_ws/src/rrt_navigation/worlds/: g3w7.world  g3w8.world  g3w9.world
(+3 files in other folders)
